--- a/views/index.html
+++ b/views/index.html
@@ -226,23 +226,23 @@ pre {
               <h2>How to use this Tip Calculator</h2>
                 <p>Enter the amount of your meal and select a percentage you would like to tip.</p>
 
-              <h2>Deploying code changes</h2>
+              <h2>Tip Calculator  </h2>
                 <p>
-                  The source code for this application is available to be forked from the <a href="https://www.github.com/sclorg/nodejs-ex">OpenShift GitHub repository</a>.
-                  You can configure a webhook in your repository to make OpenShift automatically start a build whenever you push your code:
+                  The Tip Calculator Code will go under this section
                 </p>
 
-<ol>
-  <li>From the Web Console homepage, navigate to your project</li>
-  <li>Click on Browse &gt; Builds</li>
-  <li>Click the link with your BuildConfig name</li>
-  <li>Click the Configuration tab</li>
-  <li>Click the "Copy to clipboard" icon to the right of the "GitHub webhook URL" field</li>
-  <li>Navigate to your repository on GitHub and click on repository settings &gt; webhooks &gt; Add webhook</li>
-  <li>Paste your webhook URL provided by OpenShift in the "Payload URL" field</li>
-  <li>Change the "Content type" to 'application/json'</li>
-  <li>Leave the defaults for the remaining fields &mdash; that's it!</li>
-</ol>
+<form action="/action_page.php">
+  <label for="cars">Choose a tip amount:</label>
+  <select name="tip" id="tipAmount">
+    <option value="10">10</option>
+    <option value="15">15</option>
+    <option value="20">20</option>
+    <option value="25">25</option>
+    <option value="30">30</option>
+  </select>
+  <br><br>
+  <input type="submit" value="Submit">
+</form>
 <p>After you save your webhook, if you refresh your settings page you can see the status of the ping that Github sent to OpenShift to verify it can reach the server.</p>
 <p>Note: adding a webhook requires your OpenShift server to be reachable from GitHub.</p>
 
