--- a/views/index.html
+++ b/views/index.html
@@ -234,7 +234,7 @@ pre {
 
   <form action="/action_page.php">
     <label for="fname">Bill Amount</label><br>
-    <input type="text" id="billAmount" name="billAmount" value="Enter amount">
+    <input type="text" id="billAmount" name="billAmount" value="">
     <br>
     <label for="cars">Choose a tip amount:</label>
     <select name="tip" id="tipAmount">
