--- a/views/index.html
+++ b/views/index.html
@@ -228,10 +228,10 @@ pre {
 
               <h2>Tip Calculator  </h2>
               <form action="/action_page.php">
-                <label for="fname">Bill Amount</label><br>
+                <label for="billAmount">Bill Amount</label><br>
                 <input type="text" id="billAmount" name="billAmount" value="">
                 <br>
-                <label for="cars">Choose a tip amount:</label>
+                <label for="tipAmount">Choose a tip amount:</label>
                 <select name="tip" id="tipAmount">
                   <option value="10">10</option>
                   <option value="15">15</option>
@@ -241,6 +241,9 @@ pre {
                 </select>
                 <br>
                 <input type="submit" value="Submit">
+                <br>
+                <label for="billTotal">Bill Total</label>
+                <input type="text" id="billTotal" name="billTotal" value="">
               </form>
             </section>
           </section>
