--- a/views/index.html
+++ b/views/index.html
@@ -241,8 +241,8 @@ pre {
                 </select>
                 <br>
                 <input type="submit" value="Submit">
-                <br>
-                <label for="billTotal">Bill Total</label>
+                <br><br>
+                <label for="billTotal">Bill Total</label><br>
                 <input type="text" id="billTotal" name="billTotal" value="">
               </form>
             </section>
