--- a/views/index.html
+++ b/views/index.html
@@ -181,40 +181,12 @@ html {
   background: #f5f5f5;
   height: 100%;
 }
-code{
-  background-color: white;
-  border: 1px solid #ccc;
-  padding: 1px 5px;
-  color: #888;
-}
-.code{
-  background-color: white;
-  border: 1px solid #ccc;
-  padding: 1px 5px;
-  color: #888;
-}
-pre {
-  display: block;
-  padding: 13.333px 20px;
-  margin: 0 0 20px;
-  font-size: 13px;
-  line-height: 1.4;
-  background-color: #fff;
-  border-left: 2px solid rgba(120,120,120,0.35);
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: normal;
-  word-wrap: break-word;
-  overflow: auto;
-  font-family: Menlo,Monaco,"Liberation Mono",Consolas,monospace !important;
-}
-
 </style>
 
 </head>
 <body>
 
-<section class='container'>
+  <section class='container'>
           <hgroup>
             <h1>Restaraunt Tip Calculator</h1>
           </hgroup>
@@ -252,6 +224,7 @@ pre {
         <footer>
           <div class="logo"><a href="https://www.openshift.com/"></a></div>
         </footer>
-</section>
+  </section>
+  <script scr="main.js"></script>
 </body>
 </html>
