--- a/views/index.html
+++ b/views/index.html
@@ -212,7 +212,7 @@ html {
                   <option value="30">30</option>
                 </select>
                 <br><br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="submit" id="submit">
                 <br><br>
                 <label for="billTotal">Bill Total</label><br>
                 <input type="text" id="billTotal" name="billTotal" value="">
