--- a/views/index.html
+++ b/views/index.html
@@ -199,7 +199,7 @@ html {
                 <p>Enter the amount of your meal and select a percentage you would like to tip.</p>
 
               <h2>Tip Calculator  </h2>
-              <form action="/action_page.php">
+              <form>
                 <label for="billAmount">Bill Amount</label><br>
                 <input type="text" id="billAmount" name="billAmount" value="">
                 <br>
