--- a/views/index.html
+++ b/views/index.html
@@ -227,8 +227,12 @@ html {
   </section>
   <script>
     let submit = document.getElementById('submit')
-    
-    
+    submit.addEventListener('click', function(){
+    let billAmount = document.getElementById('billAmount').value;
+    let tipAmount = document.getElementById('tipAmount').value;
+  
+    console.log(billAmount);
+    })
   </script>
 </body>
 </html>
