--- a/views/index.html
+++ b/views/index.html
@@ -233,7 +233,8 @@ html {
     let billAmount = document.getElementById('billAmount').value;
     let tipAmount = document.getElementById('tipAmount').value;
   
-    let tipTotal = document.getElementById('tipTotal').value;
+    let tipTotal = document.getElementById('tipTotal').value = billAmount * (tipAmount / 100);
+    document.getElementById('billTotal').value = parseFloat(billAmount) + parseFloat(tipTotal);
     })
   </script>
 </body>
