--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Tip Calculator</title>
 
 
@@ -184,58 +182,58 @@ html {
 </style>
 
 </head>
-<body>
+    <body>
 
-  <section class='container'>
-          <hgroup>
-            <h1>Restaraunt Tip Calculator</h1>
-          </hgroup>
+    <section class='container'>
+            <hgroup>
+                <h1>Restaraunt Tip Calculator</h1>
+            </hgroup>
 
 
-        <div class="row">
-          <section class='col-xs-12 col-sm-6 col-md-6'>
-            <section>
-              <h2>How to use this Tip Calculator</h2>
-                <p>Enter the amount of your meal and select a percentage you would like to tip.</p>
+            <div class="row">
+            <section class='col-xs-12 col-sm-6 col-md-6'>
+                <section>
+                <h2>How to use this Tip Calculator</h2>
+                    <p>Enter the amount of your meal and select a percentage you would like to tip.</p>
 
-              <h2>Tip Calculator  </h2>
-              <form>
-                <label for="billAmount">Bill Amount</label><br>
-                <input type="text" id="billAmount" name="billAmount" value="">
-                <br>
-                <label for="tipAmount">Choose a tip amount:</label>
-                <select name="tip" id="tipAmount">
-                  <option value="10">10</option>
-                  <option value="15">15</option>
-                  <option value="20">20</option>
-                  <option value="25">25</option>
-                  <option value="30">30</option>
-                </select>
-                <br><br>
-                <input type="submit" value="submit" id="submit">
-                <br><br>
-                <label for="tipAmount">Tip Amount</label><br>
-                <input type="text" id="tipAmount" name="tipAmount" value="">
-                <label for="billTotal">Bill Total</label><br>
-                <input type="text" id="billTotal" name="billTotal" value="">
-              </form>
+                <h2>Tip Calculator  </h2>
+                <form>
+                    <label for="billAmount">Bill Amount</label><br>
+                    <input type="text" id="billAmount" name="billAmount" value="">
+                    <br>
+                    <label for="tipAmount">Choose a tip amount:</label>
+                    <select name="tip" id="tipAmount">
+                    <option value="10">10</option>
+                    <option value="15">15</option>
+                    <option value="20">20</option>
+                    <option value="25">25</option>
+                    <option value="30">30</option>
+                    </select>
+                    <br><br>
+                    <input type="submit" value="submit" id="submit">
+                    <br><br>
+                    <label for="tipTotal">Tip Amount</label><br>
+                    <input type="text" id="tipTotal" name="tipTotal" value=""><br>
+                    <label for="billTotal">Bill Total</label><br>
+                    <input type="text" id="billTotal" name="billTotal" value="">
+                </form>
+                </section>
             </section>
-          </section>
-        </div>
+            </div>
 
-        <footer>
-          <div class="logo"><a href="https://www.openshift.com/"></a></div>
-        </footer>
-  </section>
-  <script>
-    let submit = document.getElementById('submit')
-    submit.addEventListener('click', function(){
-    let billAmount = document.getElementById('billAmount').value;
-    let tipAmount = document.getElementById('tipAmount').value;
-  
-    let tipTotal = document.getElementById('tipTotal').value = billAmount * (tipAmount / 100);
-    document.getElementById('billTotal').value = parseFloat(billAmount) + parseFloat(tipTotal);
-    })
-  </script>
-</body>
+            <footer>
+            <div class="logo"><a href="https://www.openshift.com/"></a></div>
+            </footer>
+    </section>
+    <script>
+        let submit = document.getElementById('submit')
+        submit.addEventListener('click', function(){
+        let billAmount = document.getElementById('billAmount').value;
+        let tipAmount = document.getElementById('tipAmount').value;
+    
+        let tipTotal = document.getElementById('tipTotal').value = billAmount * (tipAmount / 100);
+        document.getElementById('billTotal').value = parseFloat(billAmount) + parseFloat(tipTotal);
+        })
+    </script>
+    </body>
 </html>
