--- a/views/index.html
+++ b/views/index.html
@@ -203,11 +203,11 @@ html {
                     <br>
                     <label for="tipAmount">Choose a tip amount:</label>
                     <select name="tip" id="tipAmount">
-                    <option value="10">10</option>
-                    <option value="15">15</option>
-                    <option value="20">20</option>
-                    <option value="25">25</option>
-                    <option value="30">30</option>
+                    <option value="10">10%</option>
+                    <option value="15">15%</option>
+                    <option value="20">20%</option>
+                    <option value="25">25%</option>
+                    <option value="30">30%</option>
                     </select>
                     <br><br>
                     <input type="submit" value="submit" id="submit">
