--- a/views/index.html
+++ b/views/index.html
@@ -186,7 +186,7 @@ html {
 
     <section class='container'>
             <hgroup>
-                <h1>Restaraunt Tip Calculator</h1>
+                <h1>Restaurant Tip Calculator</h1>
             </hgroup>
 
 
